<resources>
    <string name="app_name">CookBook4U</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="save">Saved</string>
    <string name="dish_name">Dish Name</string>
    <string name="cook_book_4u">Cook Book For You</string>
    <string name="search_recipe">  search recipe</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="russian">russian</string>
    <string name="borscht">Borscht</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="beef">Beef</string>
    <string name="see_video_on_youtube">See video on YouTube</string>
    <string name="dish_description">dish description</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="_3_potatos">3 potatos</string>
    <string name="ingredients_for_borscht">4 qt. water 14 oz. beef stock 1 small head of cabbage 5 large potatoes 1 large carrot 1 med. beet root 1 med. onion 1 bay leaf 2 tablespoons tomato paste 3-5 cloves garlic verdure (parsley, dill, etc.) sour cream</string>
    <string name="borscht_preparation">1. Boil the beef stock for at least 1.5 hours, strain the broth through clothing, seperate the meat from the bone and carve it. 2. Peel the raw beet root, cut it in thin two-inch strips and stew for half an hour. 3. Add cubed potatoes in the boiling broth. Add the stewed beet when the broth begins to boil again. Add bay leaf. 4. Cut the carrot the same way as the beet root, fry it all over and add into borsch. 5. Slice the onion, fry on both sides, add tomato paste. Mix everything and fry for some more time. 6. Take the fried onion off the stove and add mashed garlic. 7. Shred the cabbage finely and add (but not much) into borsch when the potato is almost cooked. 8. Cover the saucepan and boil borshch for 5 minutes. Then add fried onion with garlic and seasonings. Mix everything. 9. Cover borsch and cook for 3 more minutes. Then add cut verdure. 10. Take borsch off the stove and leave uncovered.</string>
</resources>